feat: implemented basic adaptive learning algorithm in LessonService to dynamically adjust difficulty